Stop placing #upload-input off-screen, don't display it
Problems with placing #upload-input off-screen is that keyboard
navigation (tab) will gain focus of the upload buttons twice.

Hiding the other upload button (the <input> element) off-screen makes no
sense because no explanation is given. Hide it with `display: none;`.

Considering screen reader users, the <button> element (with a future
<label> element) should hopefully convey enough information about it's
purpose. `tabindex="-1"` would be an alternative, but would require
placing content off-screen.

--- a/css/pomf.css
+++ b/css/pomf.css
@@ -224,9 +224,7 @@ nav > ul > li:last-child:after {
  * UPLOAD FORM
  */
 #upload-input {
-	position: absolute;
-	top: 0;
-	left: -5000px;
+	display: none;
 }
 
 /**
